# terminalforms

./: .cursorignore  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  THIRD-PARTY-NOTICES
.cursor/rules/: do-tasks.mdc  global.mdc  quick-task.mdc  write-class-struct-binding.mdc
.devcontainer/: Dockerfile  attach.sh  devcontainer.json
.github/: README.md
.github/workflows/: TerminalForms.yml
doc/: type_coverage.md
doc/tvision/: circular_dependencies.txt  type_order.md  type_order_breadth_first.txt  type_order_depth_first.txt  types.json
doc/tvision/TypeSorter/: Program.cs
project/: TASKS.md  plan.md  type_progress.md
project/docs/: architecture.md  binding-patterns.md  memory-management.md  type-mapping.md
project/finished/: 001 Bindings.md  001 Button.md  001 Vertical slice - Add a Button to a Form.md  002 CheckBox.md
project/history/: 003 Form.md  004 Label.md
scripts/: Dockerfile  build.sh  claude.sh  clean.sh  detect_system.sh  dev-container.sh  env.sh  format.sh  init.sh  run-demo.sh  serve-website.sh  status.sh  test.sh
scripts/helpers/: detect_system.sh  echo_status.sh
src/: Directory.Build.props  TerminalForms.sln
src/.config/: dotnet-tools.json
src/PtyRunner/: Program.cs
src/TerminalForms/: Application.cs  Button.cs  CheckBox.cs  Class1.cs  ContainerControl.cs  Control.cs  ControlCollection.cs  Error.cs  Event.cs  Form.cs  Global.cs  GlobalUsings.cs  KeyDownEvent.cs  Label.cs  ListBox.cs  ListBoxItemCollection.cs  MessageEvent.cs  MetaObject.cs  MouseEventType.cs  NativeMethods.Application.cs  NativeMethods.Error.cs  NativeMethods.Event.cs  NativeMethods.KeyDownEvent.cs  NativeMethods.MessageEvent.cs  NativeMethods.MouseEventType.cs  NativeMethods.Point.cs  NativeMethods.Rect.cs  NativeMethods.VirtualMethodTable.cs  NativeMethods.common.cs  NativeMethods.cs  NativeType.cs  NativeVirtualMethod.cs  ObjectRegistry.cs  Point.cs  RadioButtonGroup.cs  RadioButtonItemCollection.cs  Rect.cs  Rectangle.cs  Size.cs  TerminalForms.csproj  (+5 more)
src/TerminalForms.Demo/: Program.cs  TerminalForms.Demo.csproj
src/TerminalFormsDemo/: ButtonClickDemo.cs  ButtonTextDemo.cs  FormResizeAfterShowDemo.cs  FormResizeBeforeShowDemo.cs  IDemo.cs  Program.cs  SimpleFormDemo.cs  TerminalFormsDemo.csproj  TestIgnoreAttribute.cs  TestIncludeAttribute.cs
src/TerminalFormsDemo/Buttons/: ButtonClickDemo.cs  ButtonIsDefault1Demo-input.txt  ButtonIsDefault1Demo-output.txt  ButtonIsDefaultDemo-output.txt  ButtonIsDefaultDemo.cs  ButtonIsDefaultDemo1-input.txt  ButtonIsDefaultDemo1-output.txt  ButtonIsDefaultDemo2-output.txt  ButtonTextAlignCenterDemo.cs  ButtonTextAlignLeftDemo-output.txt  ButtonTextAlignLeftDemo.cs  ButtonTextDemo.cs  ButtonTextReadDemo-input.txt  ButtonTextReadDemo-output.txt  ButtonTextReadDemo.cs
src/TerminalFormsDemo/Calculator/: CalculatorDemo-input.txt  CalculatorDemo-output.txt  CalculatorDemo.cs
src/TerminalFormsDemo/CheckBoxes/: CheckBoxCheckedDemo-input.txt  CheckBoxCheckedDemo-output.txt  CheckBoxCheckedDemo.cs  CheckBoxClickDemo-output.txt  CheckBoxClickDemo.cs  CheckBoxDisabledClickDemo-input.txt  CheckBoxDisabledClickDemo-output.txt  CheckBoxDisabledClickDemo.cs  CheckBoxLayoutDemo-output.txt  CheckBoxLayoutDemo.cs  CheckBoxProgrammaticChangeDemo-output.txt  CheckBoxProgrammaticChangeDemo.cs  CheckBoxTextDemo-output.txt  CheckBoxTextDemo.cs
src/TerminalFormsDemo/Forms/: FormBoundsAfterShowDemo-output.txt  FormBoundsAfterShowDemo.cs  FormBoundsBeforeShowDemo-output.txt  FormBoundsBeforeShowDemo.cs  FormCloseDemo-output.txt  FormCloseDemo.cs  FormControlBoxAfterShowDemo-output.txt  FormControlBoxAfterShowDemo.cs  FormControlBoxBeforeShowDemo-output.txt  FormControlBoxBeforeShowDemo.cs  FormInstanceFieldDemo-input.txt  FormInstanceFieldDemo-output.txt  (+17 more)
src/TerminalFormsNative/: Application.cpp  Application.h  CMakeLists.txt  Control.cpp  ControlCollection.cpp  Form.cpp  Form.h  Point.cpp  Rectangle.cpp  common.cpp  common.h
src/Tests/: DemoTest.cs  PtyProcess.cs  Tests.csproj
src/TurboVision/: Error.cs  Global.cs  NativeMethods.cs  NativeObject.cs  NativeObjectFactory.cs  TurboVision.csproj  TurboVisionException.cs  VirtualMethod.cs
src/TurboVision.Demo/: Program.cs  TurboVision.Demo.csproj
src/tfcore/: Application.cpp  Application.h  Button.cpp  Button.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  Control.cpp  Control.h  ControlCollection.cpp  EventHandler.h  Form.cpp  Form.h  Label.cpp  Label.h  ListBox.cpp  ListBox.h  Point.h  RadioButtonGroup.cpp  RadioButtonGroup.h  Rectangle.h  TextBox.cpp  TextBox.h  common.cpp  common.h
src/tvision4c/: Application.cpp  Application.h  CMakeLists.txt  Error.cpp  Error.h  Event.cpp  Event.h  KeyDownEvent.cpp  KeyDownEvent.h  MessageEvent.cpp  MessageEvent.h  MouseEventType.cpp  MouseEventType.h  Point.cpp  Point.h  Rect.cpp  Rect.h  VirtualMethod.h  VirtualMethodTable.cpp  VirtualMethodTable.h  WriteArgs.cpp  WriteArgs.h  common.cpp  common.h  tvision4c.cpp  tvision4c.h
src/tvision4c/Application/: Application.cpp  Application.h  TApplication.cpp  TApplication.h
src/tvision4c/Dialogs/: TDirEntry.cpp  TDirEntry.h  TSItem.cpp  TSItem.h  TSearchRec.cpp  TSearchRec.h
src/tvision4c/Editors/: TFindDialogRec.cpp  TFindDialogRec.h  TReplaceDialogRec.cpp  TReplaceDialogRec.h
src/tvision4c/HelpBase/: TParagraph.cpp  TParagraph.h
src/tvision4c/Objects/: Point.cpp  Point.h  Rect.cpp  Rect.h  TPoint.cpp  TPoint.h  TRect.cpp  TRect.h
src/tvision4c/Outlines/: TNode.cpp  TNode.h
src/tvision4c/Resources/: TResourceItem.cpp  TResourceItem.h  TStrIndexRec.cpp  TStrIndexRec.h
src/tvision4c/ScreenCells/: TCellChar.cpp  TCellChar.h
src/tvision4c/System/: Event.cpp  Event.h  KeyDownEvent.cpp  KeyDownEvent.h  MessageEvent.cpp  MessageEvent.h  MouseEventType.cpp  MouseEventType.h  TClipboard.cpp  TClipboard.h  TEvent.cpp  TEvent.h  TPMRegs.cpp  TPMRegs.h  TTimerQueue.cpp  TTimerQueue.h
src/tvision4c/Text/: TTextMetrics.cpp  TTextMetrics.h
src/tvision4c/Views/: WriteArgs.cpp  WriteArgs.h  write_args.cpp  write_args.h
src/website/: .gitignore  docfx.json  index.md  toc.yml
(+92 files in other folders)
